fix contrast problem on nav bar, footer

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: whitesmoke;
   margin: 0;
   padding: 0;
 }
@@ -22,6 +22,14 @@ h6 {
   font-size: 1.5rem;
 }
 
+.skiplinks a {
+  position: absolute;
+  background-color: black;
+  color:gray;
+  padding: .5em 1em;
+  font-weight: bold;
+}
+
 .skiplinks a:focus{
   top:0%;
 }
@@ -37,11 +45,12 @@ img {
 }
 
 .main-nav ul {
+  background-color: orange;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 .main-nav ul li {
@@ -51,7 +60,7 @@ img {
 
 .main-nav ul li a {
   display: block;
-  color: inherit;
+  color: black;
   text-decoration: none;
   font-size: 1.25rem;
 }
@@ -82,3 +91,11 @@ form button {
   padding: 2rem 0;
 }
 
+.site-footer a {
+  position: absolute;
+  /* top: -3em; */
+  background-color: black;
+  color:gray;
+  padding: .5em 1em;
+  font-weight: bold;
+}
